Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15009

precreate should cleanup orphans upon error

XMLWordPrintable

    • 3
    • 9223372036854775807

      Sometimes OST object precreate succeeds, but the reply get lost or timed out, in this case MDT doesn't update the known last_id, and just retries. And then subsequent precreate will fail because the last_id known on MDT is less than that on OST. Instead, upon each failure, it should restart as a reconnect and cleanup orphans first, and then continue subsequent precreate.

            laisiyao Lai Siyao
            laisiyao Lai Siyao
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: